src/yini_test/cases/golden/strict/invalid/empty-document/comments-only.yini
# This document has no data.
// This full-line slash comment also has no data.
/*
 * Block comments alone do not create data.
 */
